erDiagram
    Users {
        int userID PK
        string firstName
        string lastName
        string email
        string username
        string passwordHash
        string password
    }

    Balances {
        int balance_id PK
        double amount
        int payer_id FK
        int payee_id FK
    }

    Expenses {
        int expense_Id PK
        string expense_name
        string description
        double amount
        string currency
        int payer_id FK
        int category_id FK
        int group_id FK
    }

    Categories {
        int category_Id PK
        string categoryName
    }

    Groups {
        int group_Id PK
        string group_name
    }

    User_share {
        int expense_Id PK
        int user_id PK
        double share_amount
    }

    User_group {
        int user_id PK
        int group_Id PK
    }

    Users ||--o{ Balances : payer
    Users ||--o{ Balances : payee
    Users ||--o{ User_share : ""
    Expenses ||--o{ User_share : ""
    Users ||--o{ Expenses : payer
    Categories ||--o{ Expenses : ""
    Groups ||--o{ Expenses : ""
    Users ||--o{ User_group : ""
    Groups ||--o{ User_group : ""
